--- a/index.html
+++ b/index.html
@@ -36,11 +36,14 @@
   <section id="hero" class="d-flex flex-column align-items-center justify-content-center">
     <h1><span class="font-carina">C a r i n a</span>
         <span class="font-henriques">Henriques</span></h1>
-        <h2>Website Launch Imminent...</h2>
-          <p><i class="fa-regular fa-envelope"></i>  hi@carinahenriques.co.uk</p>
-          <p><i class="fa-solid fa-phone-volume"></i>  07566212778</p>
-    <a href="#about" class="btn-get-started scrollto"><i class="bi bi-chevron-double-down"></i></a>
-  </section><!-- End Hero -->
-
+      <h2>Website Launch Imminent...</h2>
+      <ul>
+        <li><i class="fa-regular fa-envelope"></i>  hi@carinahenriques.co.uk</li>
+        <li><i class="fa-solid fa-phone-volume"></i>  07566212778</li>
+      </ul>
+        
+        <p></p>
+  </section>
+  <!-- End Hero -->
 </body>
 </html>
